--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
-    <title>Hello World!</title>
+    <title>Sunjammer Pose</title>
+    <link rel="stylesheet" href="./styles.css"> 
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
-    <div>Teachable Machine Pose Model</div>
-    <button type="button" onclick="init()">Start</button>
-    <div><canvas id="canvas"></canvas></div>
-    <div id="label-container"></div>
+    <main>
+      <div class="training-context">
+        <div><canvas id="canvas"></canvas></div>
+        <div class="label-container">
+          <p class="section-title">Labels</p>
+          <div id="label-list"></div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="system-context">
+        Node.js: <span id="node-version"></span>,
+        Chromium: <span id="chrome-version"></span>,
+        Electron: <span id="electron-version"></span>.
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
     <script type="text/javascript">
@@ -25,7 +33,9 @@
 
       // the link to your model provided by Teachable Machine export panel
       const URL = "https://teachablemachine.withgoogle.com/models/7CvK9r02r/";
-      let model, webcam, ctx, labelContainer, maxPredictions;
+      let model, webcam, ctx, labelList, maxPredictions;
+
+      init();
 
       async function init() {
         const modelURL = URL + "model.json";
@@ -49,9 +59,9 @@
         const canvas = document.getElementById("canvas");
         canvas.width = size; canvas.height = size;
         ctx = canvas.getContext("2d");
-        labelContainer = document.getElementById("label-container");
+        labelList = document.getElementById("label-list");
         for (let i = 0; i < maxPredictions; i++) { // and class labels
-            labelContainer.appendChild(document.createElement("div"));
+            labelList.appendChild(document.createElement("div"));
         }
       }
 
@@ -71,7 +81,7 @@
         for (let i = 0; i < maxPredictions; i++) {
             const classPrediction =
                 prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-            labelContainer.childNodes[i].innerHTML = classPrediction;
+            labelList.childNodes[i].innerHTML = classPrediction;
         }
 
         const sortedPredictions = prediction.sort((a, b) => b.probability - a.probability);
